[package]
name = "embassy-learning"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4"
env_logger = "0.11"
embassy-executor = { version = "0.7.0", path = "./embassy/embassy-executor", features = ["arch-std", "executor-thread", "log"] }
embassy-time = { version = "0.4.0", path = "./embassy/embassy-time", features = ["log", "std", ] }